--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
             
             <button class="clear">C</button>
             <button>⌫</button>
-            <button>÷</button>
+            <button class="operator">÷</button>
 
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>&times</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="operator">&times;</button>
 
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>-</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="operator">-</button>
 
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>+</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="operator">+</button>
 
-            <button class="zero">0</button>  
+            <button class="number zero">0</button>  
             <button>.</button>      
-            <button>=</button>
+            <button class="equals">=</button>
 
         </div>
-        
+
     </div>
 </body>
 </html>
