--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <button class="operator">+</button>
 
             <button class="number zero">0</button>  
-            <button>.</button>      
+            <button class="decimal">.</button>      
             <button class="equals">=</button>
 
         </div>
