Implement backspace function

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="buttons">
             
             <button class="clear">C</button>
-            <button>⌫</button>
+            <button class="backspace">⌫</button>
             <button class="operator">÷</button>
 
             <button class="number">7</button>
