--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <button class="number">3</button>
             <button class="operator">+</button>
 
+            <button class="sign">+/-</button>  
             <button class="number zero">0</button>  
             <button class="decimal">.</button>      
             <button class="equals">=</button>
