--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
         <div class="buttons">
             
             <button class="clear">C</button>
-            <button class="backspace">⌫</button>
-            <button class="operator">÷</button>
+            <button class="backspace" key="Backspace">⌫</button>
+            <button class="operator" key="/">÷</button>
 
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
-            <button class="operator">&times;</button>
+            <button class="number" key="7">7</button>
+            <button class="number" key="8">8</button>
+            <button class="number" key="9">9</button>
+            <button class="operator" key="*">&times;</button>
 
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
-            <button class="operator">-</button>
+            <button class="number" key="4">4</button>
+            <button class="number" key="5">5</button>
+            <button class="number" key="6">6</button>
+            <button class="operator" key="-">-</button>
 
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
-            <button class="operator">+</button>
+            <button class="number" key="1">1</button>
+            <button class="number" key="2">2</button>
+            <button class="number" key="3">3</button>
+            <button class="operator" key="+">+</button>
 
             <button class="sign">+/-</button>  
-            <button class="number zero">0</button>  
-            <button class="decimal">.</button>      
-            <button class="equals">=</button>
+            <button class="number zero" key="0">0</button>  
+            <button class="decimal" key=".">.</button>      
+            <button class="equals" key="Enter">=</button>
 
         </div>
 
