--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
         <div class="buttons">
             
-            <button class="clear">C</button>
+            <button class="clear">C</button> 
             <button class="backspace" key="Backspace">⌫</button>
+            <button class="sign">+/−</button>  
             <button class="operator" key="/">÷</button>
 
             <button class="number" key="7">7</button>
@@ -27,14 +28,14 @@
             <button class="number" key="4">4</button>
             <button class="number" key="5">5</button>
             <button class="number" key="6">6</button>
-            <button class="operator" key="-">-</button>
+            <button class="operator" key="-">−</button>
 
             <button class="number" key="1">1</button>
             <button class="number" key="2">2</button>
             <button class="number" key="3">3</button>
             <button class="operator" key="+">+</button>
 
-            <button class="sign">+/-</button>  
+            
             <button class="number zero" key="0">0</button>  
             <button class="decimal" key=".">.</button>      
             <button class="equals" key="Enter">=</button>
